# shopping-list-llm

./: .gitignore  run.py
.devcontainer/: devcontainer.json
backend/: .env  pyproject.toml
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/endpoints/: categories.py  chat.py  chat_tools.py  items.py  login.py  shopping_lists.py  users.py
backend/app/core/: config.py  security.py
backend/scripts/: manage_users.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/dev-dist/: sw.js
frontend/src/: App.jsx  App.svelte
frontend/src/components/: AddItemForm.jsx  CategoryDisplay.jsx  ChatModal.jsx  ChatModel.jsx  CreateListModal.jsx  EditItemModal.jsx  FloatingChatButton.jsx  ItemRow.jsx  Login.jsx  ManageListModal.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx  AuthProvider.jsx
frontend/src/hooks/: useAuth.js
frontend/src/icons/: PriceMatchIcon.jsx
frontend/src/lib/: api.js
frontend/src/lib/components/: AddItemForm.svelte  CategoryDisplay.svelte  ChatModal.svelte  EditItemModal.svelte  ItemRow.svelte
frontend/src/pages/: ListDetailPage.jsx  ListPageDetail.jsx  ShoppingListsPage.jsx
frontend/src/services/: apiClient.js
